fix(render): do not clip direction arrow container
Fixes #250

Workaround for clipped direction arrow container
in Safari and mobile browsers.
On first render to a canvas any perspective
transformed sibling elements gets clipped at
0 depth.
Setting relative position, hidden overflow and 100%
height fixes issue on all browsers.
Set pointer events to none on element covering canvas
container to ensure that mouse and touch events
occur correctly.
Reset pointer events to auto on dom renderer to
recieve pointer events in component dom elements.

--- a/styles/mapillary-js.css
+++ b/styles/mapillary-js.css
@@ -15,4 +15,12 @@
 
 .mapillary-js .mapillary-js-dom {
     user-select: none;
+    position: relative;
+    height: 100%;
+    overflow: hidden;
+    pointer-events: none;
+}
+
+.mapillary-js-dom .domRenderer {
+    pointer-events: auto;
 }
